@@ -17,6 +17,7 @@
 * Exposed EventType in EventInstanceWrapper under getEventTypeObject()
 * Optionally, escalation emails for non-Do-not-log email event handlers will resend the escalation email every escalation period if active and unacknowledged.
 * EventDao::get returns null instead of throws exception if no event exists
+* Purged values removed from the point's value cache
 
 *Version 3.3.0*
 * Ability to import a point hierarchy path for data points in the data point JSON via "path" : "new path"
